# bets-scraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: scraper.yml
sql/: 001_schema.sql
src/: config.py
src/scraper/: captcha.py  login.py  status.py
src/storage/: csv_parser.py  db.py
src/utils/: logger.py  notify.py
tools/: migrate_from_excel.py
