[project]
name = "bets-affiliate-scraper"
version = "0.2.0"
description = "Scraper automatizado de relatórios de afiliados de apostas"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0",
    "playwright>=1.44",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "supabase>=2.4",
    "httpx>=0.27",
    "resend>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"